fix align

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,8 +143,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     margin: 0.5cm 0;
     padding-bottom: 0.4cm;
+    line-height: 0.7cm;
     transition: 0.5s;
 }
 
